--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
             ${{ runner.os }}-node_modules-
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Build plugin
         run: npm run build
@@ -44,6 +44,19 @@ jobs:
             exit 1
           fi
 
-          gh release create "$tag" \
+          echo "Creating release for tag: $tag"
+          if ! gh release create "$tag" \
             --title="$tag" \
-            main.js manifest.json styles.css
+            main.js manifest.json styles.css; then
+            echo "Failed to create release. Logs:"
+            gh release view "$tag" --json url,assets
+          else
+            echo "Release created successfully"
+          fi
+      
+      - name: Upload error logs
+        if: failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: error-logs
+          path: ${{ github.workspace }}/*.log
