--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "wordsmith",
-	"version": "1.3.3",
+	"version": "1.3.4",
 	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
 	"main": "main.js",
 	"scripts": {
@@ -27,6 +27,7 @@
 		"@deepgram/sdk": "^3.5.0",
 		"js-yaml": "^4.1.0",
 		"oci-objectstorage": "^2.89.4",
-		"openai": "^4.53.0"
+		"openai": "^4.53.0",
+		"simple-git": "3.25.0"
 	}
 }
