--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,7 @@ jobs:
 
           gh release create "$tag" \
             --title="$tag" \
-            main.js manifest.json styles.css settings-tab.ts
+            main.js manifest.json styles.css
       
       - name: Upload error logs
         if: failure()
