--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
 	"name": "wordsmith",
-	"version": "1.3.17",
+	"version": "1.3.16",
 	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json",
-		"postversion": "sh ./post-version.sh"
+		"version": "node version-bump.mjs"
 	},
 	"keywords": [],
 	"author": "",
