--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
 	"name": "wordsmith",
-	"version": "1.3.20",
+	"version": "1.3.16",
 	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs"
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"postversion": "git push && git push --tags"
 	},
 	"keywords": [],
 	"author": "",
